--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "one-dark-syntax",
+  "name": "one-my-dark-syntax",
   "theme": "syntax",
   "version": "1.6.0",
   "description": "A dark syntax theme",
